# main_project_12_BE

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmessage  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  schema.yaml  내일 할일 .txt
apps/conversations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/conversations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_role.py  0003_remove_conversation_tags_delete_conversationtag_and_more.py
apps/core/: middleware.py  permissions.py  tasks.py
apps/datasets/: admin.py  models.py  serializers.py  urls.py  views.py
apps/datasets/migrations/: 0001_initial.py  0002_initial.py
apps/inference/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/inference/migrations/: 0001_initial.py  0002_alter_inferencerun_error_code.py  0002_inferencerun_error_message_and_more.py  0003_inferencerun_check_pass_inferencerun_retry_used_and_more.py
apps/search/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/search/management/commands/: update_popular_queries.py  update_recommended_questions.py
apps/search/migrations/: 0001_initial.py  0002_create_popular_queries_mv.py  0002_popularquery_recommendedquestion.py  0003_alter_popularquery_options_and_more.py  0003_create_recommended_questions_mv.py  0004_create_materialized_views.py
apps/stats/: serializers.py  tests.py  urls.py  views.py
apps/users/: admin.py  auth_urls.py  forms.py  models.py  pages_urls.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
deploy/nginx/: app.conf
docs/: 01_사용자요구사항.md  02_ERD.md  03_테이블명세서.md  04_API명세서.md  pr_followup_actions.md  release_readiness_plan.md  ui_style_gap_analysis.md  ui_style_review_status.md  ui_style_snapshot.md  프론트엔드_템플릿.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/navigation/: StatusBadge.tsx
frontend/src/components/search/: ResultTabs.tsx  SearchInput.tsx  SuggestionList.tsx
frontend/src/components/state/: EmptyState.tsx  ErrorState.tsx  LoadingSkeleton.tsx  NoAccess.tsx
frontend/src/hooks/: useSearchExperience.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: AdminPage.tsx  HistoryPage.tsx  HomePage.tsx  MyPage.tsx  NotFoundPage.tsx
frontend/src/providers/: AppProviders.tsx
frontend/src/router/: index.tsx
frontend/src/services/: ApiContext.tsx  QueryClientProvider.tsx  apiClient.ts  searchService.ts  statsService.ts  userService.ts
frontend/src/types/: http.ts  index.ts
frontend/src/utils/: url.ts
scripts/: run.sh
static/css/: chat.css  style.css  style.fixed.css
static/js/: chat.js  main.js  sidebar.js
staticfiles/css/: chat.css  style.css
staticfiles/js/: chat.js  main.js  sidebar.js
templates/: base.html  conversation.html  dashboard.html  login.html  main.html  profile.html  signup.html
templates/emails/: signup_verification_email.html  signup_verification_email.txt
templates/includes/: header.html
