[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "drf-spectacular>=0.28.0",
    "requests>=2.32.5",
    "pillow>=11.3.0",
    "gunicorn>=21.2",
    "uvicorn>=0.24.0",
    "django-filter>=25.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.12.12",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",

]


[tool.uv]
# uv 관련 설정 (기본 환경)
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations", "venv", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle 오류 (기본적인 문법 오류)
    "F",  # pyflakes (미사용 import, 변수 등)
    "I",  # isort (import 정렬)
    "W",  # pycodestyle 경고
]

ignore = [
    "E203",  # black과 호환성
    "E501",  # 라인 길이 (black이 처리)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]  # Django 프로젝트 구조에 맞게
