[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.1.1",
    "drf-spectacular>=0.28.0",
    "requests>=2.32.5",
    "pillow>=11.3.0",
    "gunicorn>=21.2",
    # PostgreSQL 드라이버 (윈도우 개발환경/도커 운영 모두 대응)
    "psycopg2-binary>=2.9.10",  # psycopg2 대신 psycopg2-binary 사용
    "uvicorn>=0.24.0",
    "django-filter>=25.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-cors-headers>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.12.12",
    "pre-commit>=4.3.0",
    "pytest-cov>=6.2.1",

]


[tool.uv]
# uv 관련 설정 (기본 환경)
managed = true